Project

General

Profile

Actions

Bug #49738

closed

notification: librgw is not initializing kafka and amqp libraries

Added by Yuval Lifshitz about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
notification
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when persistent notifications are used an process that use librgw and has persistent notifications configured with kafka/amqp endpoint, will fail sending them.

this can also happen when such a process (e.g. nfs-genesha) belongs to the same cluster, even if notifications are configured only for the regular RGWs, librgw may lock a kafka/amqp topic and own it.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #50094: pacific: notification: librgw is not initializing kafka and amqp librariesResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz about 3 years ago

  • Pull request ID set to 40055
Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Casey Bodley about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50094: pacific: notification: librgw is not initializing kafka and amqp libraries added
Actions #5

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF