librgw/notifications: initialize kafka and amqp

Fixes: https://tracker.ceph.com/issues/49738

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>